feat: get enrichment for analysis result

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ springdoc:
     operations-sorter: alpha
   api-docs:
     enabled: true
+ipinfo:
+  lite-url: https://api.ipinfo.io
+  token: ec2e0de10eeaea
+  geo-url: https://ipinfo.io
